[tool.poetry]
name = "load-testing"
version = "0.1.0"
description = ""
authors = ["Raphael Obadia <raphael.obadia@loreal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
